Fixed Hover wrap bug

--- a/index.css
+++ b/index.css
@@ -68,16 +68,10 @@ div.btn-group >a{
 #skills-header{
   color: white;
   border-right: 3px solid white;
-  padding: 5px;
-  
-
+  width: max-content;
 }
 
-#skills-div{
-  position: relative;
 
-    
-}
 .type{
   color: #7b9edb;
 }
@@ -207,13 +201,18 @@ div.btn-group >a{
 
 .Skills-Container{
   background-color: #7b9edb;
+  display: block;
+  text-align: center;
+  border: 2px solid red;
+}
+
+#skill-div{
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  padding: 0;
-  margin: 0;
+  border: 3px solid blue;
+  width: 100%;
 }
+
 
 .Skill-Box{
   display: flex;
@@ -225,9 +224,11 @@ div.btn-group >a{
 
 
 .Skill-Box>img{
-
-  width: 200px;
+  
+  width: 150px;
   height: auto;
+  margin-right: 10px;
+  margin-top: 10px; 
 }
 
 .skill-Image{
